# sfmc-client-python

./: .env.example  .gitignore  README.md  SFMCAPIClient.py  app.py  pyproject.toml  requests_handler.py  requirements.txt  setup.py  sfmc_api_client.py
core/: exceptions.py  requests_handler.py  sfmc_api_client.py
managers/: automation_manager.py  base_manager.py  data_extension_manager.py  manager_automations.py  manager_base.py  manager_data_extensions.py  manager_queries.py  manager_subscribers.py  query_manager.py  subscriber_manager.py
object_managers/: automation_manager.py  data_extension_manager.py  query_manager.py
sfmc-client/managers/: manager_automations.py  manager_data_extensions.py  manager_queries.py  manager_subscribers.py
sfmc-client/sfmc_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sfmc_client/auth/: auth_manager.py
src/sfmc_client/client/: async_client.py  base_client.py  sync_client.py
src/sfmc_client/core/: config.py  exceptions.py
src/sfmc_client/http/: async_http_client.py  base_http_client.py  sync_http_client.py
src/sfmc_client/manager/: automations.py  base_manager.py  data_extensions.py  queries.py  subscribers.py
tests/auth/: test_auth_manager.py
tests/client/: test_sync_client.py
tests/core/: test_config.py
tests/http/: test_sync_http_client.py
tests/manager/: test_data_extensions.py
